--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ security.jwt.expiration-time=3600000
 
 # Database connection
 
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSSXXX
 
 spring.jackson.time-zone=UTC
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
